[package]
name = "hip-fryer"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
float8 = "0.3.0"
futures = "0.3.31"
half = "2.6.0"
libc = "0.2.174"
rand = "0.9.2"
rocm-rs = "0.3.3"
rocm_smi_lib = "0.3.2"
tokio = { version = "1.46.1", features = ["full"] }
